kubernetes/platform/messaging/kafka-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: kafka
  labels:
    app: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
