kubernetes/platform/messaging/kafka-ui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kafka-ui
  namespace: kafka
spec:
  hostnames:
    - kafka.timourhomelab.org
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: gateway
      sectionName: https
  rules:
    - backendRefs:
        - name: kafka-ui
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
